# gcw0-sdl2-cmake-sample

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-gcw.sh  build_gcw.sh
cmake/gcw-zero/: gcw-zero.cmake  opk_build.sh
cmake/gcw-zero/opk-data/: default.gcw0.desktop  run_program.sh
src/: Main.cpp
